# tauriOpenGamesAutoPlay

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/uni-input/: Cargo.toml
src-tauri/crates/uni-input/src/: keyboard.rs  lib.rs  mouse.rs
src-tauri/crates/uni-window/: Cargo.toml
src-tauri/crates/uni-window/src/: lib.rs
src-tauri/src/: keypress_simulator.rs  lib.rs  main.rs  midi_analyzer.rs  mouse_simulator.rs
src/components/: HotkeyInput.vue  KeySettings.vue  LeftPanel.vue  RightPanel.vue  ShortcutSettings.vue
src/components/common/: Dialog.vue  Toast.vue
src/components/dialogs/: EventTableDialog.vue  HelpDialog.vue  SettingsDialog.vue
src/config/: theme.json
src/services/: shortcutService.ts
src/utils/: settingsManager.ts
