[package]
name = "opengamesautoplay"
version = "0.1.0"
description = "OpenGamesAutoPlay - 游戏自动演奏工具"
authors = ["深瞳浅入梦"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opengamesautoplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.x", features = [] }

[dependencies]
tauri = { version = "2.9.x", features = [] }
tauri-plugin-opener = "2.5.x"
tauri-plugin-log = "2.7.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-global-shortcut = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1" 
midly = "0.5.3"
enigo = "0.6.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
rand = "0.8"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
uni-input = { path = "crates/uni-input" }
uni-window = { path = "crates/uni-window" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
