[package]
name = "uni-window"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = "0.7.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSRunningApplication", "NSApplication"] }
